[package]
name = "nesimg_gui"
default-run = "nesimg_gui"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "nesimg_gui"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = { git = "https://github.com/emilk/egui.git", rev = "a5076d4" }
eframe = { git = "https://github.com/emilk/egui.git", rev = "a5076d4", features = ["persistence"] }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "a5076d4", features = ["image"] }
egui_glow = { git = "https://github.com/emilk/egui.git", rev = "a5076d4" }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
rfd = "0.8.2"
flume = "0.10.12"
image = { version = "0.24.2", default-features = false, features = ["png"] }
once_cell = "1.10.0"
kmeans_colors = "0.5.0"
rand = "0.8.5"
clipboard = "0.5.0"
arboard = "2.1.1"
tracing = "0.1.34"
glow = "0.11.2"
crevice = { version = "0.8.0" }
anyhow = "1.0.57"
bytemuck = "1.9.1"
serde_json = "1.0.81"
notify = "4.0.17"
palette = "0.6.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../../other/egui/egui" }
# eframe = { path = "../../other/egui/eframe" }
# epaint = { path = "../../other/egui/epaint" }
# egui_extras = { path = "../../other/egui/egui_extras" }
