[package]
name = "nesimg"
default-run = "nesimg"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2021"
rust-version = "1.60"
license-file = "./LICENSE.md"

[[bin]]
name = "nesimg"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = { git = "https://github.com/zicklag/egui", branch = "fix-1715" }
eframe = { git = "https://github.com/zicklag/egui", branch = "fix-1715", features = ["wgpu", "persistence"], default-features = false }
egui_extras = { git = "https://github.com/zicklag/egui", branch = "fix-1715", features = ["image"] }
egui_demo_lib = { git = "https://github.com/zicklag/egui", branch = "fix-1715", features = ["serde"] }
serde = { version = "1", features = ["derive"] } 

native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }

flume = "0.10.12"
image = { version = "0.24.2", default-features = false, features = ["png"] }
once_cell = "1.10.0"
kmeans_colors = "0.5.0"
rand = "0.8.5"
arboard = "2.1.1"
tracing = "0.1.34"
anyhow = "1.0.57"
bytemuck = "1.9.1"
serde_json = "1.0.81"
notify = "4.0.17"
structopt = "0.3.26"
watch = "0.2.2"
indexmap = { version = "1.8.2", features = ["serde"] }
ulid = { version = "0.5.0", features = ["serde"] }
path-absolutize = "3.0.13"
pathdiff = "0.2.1"
encase = { version = "0.2.0", features = ["glam"] }
glam = "0.20.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../../other/egui/egui" }
# eframe = { path = "../../other/egui/eframe" }
# epaint = { path = "../../other/egui/epaint" }
# egui_extras = { path = "../../other/egui/egui_extras" }
